--- a/03/demo/index.css
+++ b/03/demo/index.css
@@ -31,7 +31,7 @@ html, body, .container {
     border-bottom: 1px solid #e4e6eb80;
 }
 
-.header-img {
+.header-img > img {
     height: 48px;
     width: 48px;
     border-radius: 50%;
